--- a/style.css
+++ b/style.css
@@ -136,3 +136,63 @@ div {
     border-color: transparent transparent #404148;
 }
 
+
+#hexagon {
+	width: 100px;
+	height: 55px;
+	background: #2c3e50;
+	position: relative;
+	bottom: 22.5px;
+}
+#hexagon::before {
+	content: "";
+	position: absolute;
+	top: -25px;
+	left: 0;
+	width: 0;
+	height: 0;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	border-bottom: 25px solid #2c3e50;
+}
+#hexagon::after {
+	content: "";
+	position: absolute;
+	bottom: -25px;
+	left: 0;
+	width: 0;
+	height: 0;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	border-top: 25px solid #2c3e50;
+}
+
+
+#octagon {
+	width: 100px;
+	height: 100px;
+	background: #48647c;
+	position: relative;
+}
+
+#octagon::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-bottom: 29px solid #48647c;
+	border-left: 29px solid white;
+	border-right: 29px solid white;
+	width: 42px;
+}
+
+#octagon::after {
+	content: "";
+	position: absolute;
+	top: 75px;
+	left: 0;
+	border-top: 29px solid #48647c;
+	border-left: 29px solid white;
+	border-right: 29px solid white;
+	width: 42px;
+}
